--- a/Admin/DataManager/View/Admin.Account.Edit.fxml
+++ b/Admin/DataManager/View/Admin.Account.Edit.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ButtonType?>
 <?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -25,16 +26,16 @@
                 <Label layoutX="45.0" layoutY="224.0" prefHeight="46.0" prefWidth="123.0" styleClass="LabelTilte" text="Password">
 
                 </Label>
-                <TextField layoutX="212.0" layoutY="171.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter UserName" styleClass="TextFieldInput" />
-                <TextField layoutX="212.0" layoutY="232.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter Password" styleClass="TextFieldInput" />
-                <Label layoutX="211.0" layoutY="113.0" prefHeight="36.0" prefWidth="200.0" styleClass="LabelTilte" text="Label" />
+                <TextField fx:id="txtUserName" layoutX="212.0" layoutY="171.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter UserName" styleClass="TextFieldInput" />
+                <Label fx:id="txtName" layoutX="211.0" layoutY="113.0" prefHeight="36.0" prefWidth="200.0" styleClass="LabelTilte" text="Label" />
                 <Label layoutX="47.0" layoutY="282.0" prefHeight="46.0" prefWidth="150.0" styleClass="LabelTilte" text="Confirm Passwrd">
                     <font>
                         <Font size="10.0" />
                     </font>
                 </Label>
-                <TextField layoutX="212.0" layoutY="290.0" prefHeight="38.0" prefWidth="198.0" promptText="Enter Confirm Password" styleClass="TextFieldInput" />
-            <Label layoutX="211.0" layoutY="54.0" prefHeight="36.0" prefWidth="200.0" styleClass="LabelTilte" text="Label" />
+            <Label fx:id="txtEmployeeId" layoutX="211.0" layoutY="54.0" prefHeight="36.0" prefWidth="200.0" styleClass="LabelTilte" text="Label" />
+            <PasswordField fx:id="txtPassword" layoutX="215.0" layoutY="225.0" prefHeight="45.0" prefWidth="196.0" promptText="Enter Password" styleClass="TextFieldInput" />
+            <PasswordField fx:id="txtPasswordAgain" layoutX="215.0" layoutY="283.0" prefHeight="45.0" prefWidth="196.0" promptText="Enter Password Again" styleClass="TextFieldInput" />
             </children></AnchorPane>
     </header>
     <content>
