--- a/Admin/DataManager/View/Admin.Account.fxml
+++ b/Admin/DataManager/View/Admin.Account.fxml
@@ -12,12 +12,12 @@
 
 <AnchorPane prefHeight="515.0" prefWidth="899.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminAccountController">
 <children>
-    <TableView fx:id="table" layoutX="156.0" layoutY="82.0" prefHeight="323.0" prefWidth="619.0" styleClass="table-view">
+    <TableView fx:id="tableView" layoutX="156.0" layoutY="82.0" prefHeight="323.0" prefWidth="619.0" styleClass="table-view">
         <columns>
-            <TableColumn fx:id="idColumn" prefWidth="73.0" styleClass="column-header-background" text="OwnerID" />
-            <TableColumn fx:id="nameColumn" prefWidth="223.0" styleClass="column-header-background" text="Name" />
-            <TableColumn fx:id="phoneColumn" prefWidth="184.0" styleClass="column-header-background" text="UserName" />
-            <TableColumn fx:id="PositionColumn" prefWidth="138.0" styleClass="column-header-background" text="Password" />
+            <TableColumn fx:id="ownerIdColumn" prefWidth="73.0" styleClass="column-header-background" text="OwnerID" />
+            <TableColumn fx:id="ownerNameColumn" prefWidth="223.0" styleClass="column-header-background" text="Name" />
+            <TableColumn fx:id="userNameColumn" prefWidth="184.0" styleClass="column-header-background" text="UserName" />
+            <TableColumn fx:id="passwordColumn" prefWidth="138.0" styleClass="column-header-background" text="Password" />
         </columns>
     </TableView>
     <Label fx:id="header" alignment="CENTER" prefHeight="34.0" prefWidth="915.0" text="Manage" />
