--- a/Helpers/MainControl/Controlbar.css
+++ b/Helpers/MainControl/Controlbar.css
@@ -7,12 +7,24 @@
     -fx-pref-width: 100;
     -fx-alignment: center;
     -fx-background-radius: 10px;
-    -fx-background-color: #fca311;
+    -fx-background-color: #d3c5ad;
     -fx-text-fill: #fff;
     -fx-font-weight: 700;
     -fx-effect: dropshadow(three-pass-box, #111,5,0,4,2);
     -fx-padding: 5,0,0,0;
 }
+.toggle-button{
+     -fx-pref-width: 200;
+     -fx-max-width: 200;
+     -fx-alignment: center;
+     -fx-background-radius: 10px;
+     -fx-background-color: #fff;
+     -fx-text-fill: #5F50F1;
+     -fx-border-radius: 10px;
+     -fx-font-weight: 700;
+     -fx-effect: dropshadow(three-pass-box, #111,5,0,4,2);
+     -fx-padding: 5,0,0,0;
+ }
 
 .menu-item{
     -fx-background-color: #035980;
@@ -28,10 +40,17 @@
 }
 
 .root{
-    -fx-background-color: #97e1ea;
-    -fx-pref-width: 50;
-    -fx-min-width: 50;
+    -fx-background-color: #fff;
+    -fx-spacing: 5;
+    -fx-pref-width: 100;
+    -fx-min-width: 30;
     -fx-max-width: 250;
-    -fx-max-height: 50;
     -fx-hgap: 5;
+    -fx-padding: 5,0,0,0;
+}
+
+.toggle-button:selected{
+    -fx-background-color: #5F50F1;
+
+    -fx-text-fill: #fff;
 }
