--- a/Admin/DataManager/View/Admin.Account.Add.fxml
+++ b/Admin/DataManager/View/Admin.Account.Add.fxml
@@ -47,6 +47,7 @@
     </expandableContent>
     <buttonTypes>
         <ButtonType fx:constant="APPLY" />
+      <ButtonType fx:constant="CLOSE" />
     </buttonTypes>
     <stylesheets>
         <URL value="@Css/AddApplication.css" />
