--- a/Admin/DataManager/View/Admin.Account.Edit.fxml
+++ b/Admin/DataManager/View/Admin.Account.Edit.fxml
@@ -46,6 +46,7 @@
     </expandableContent>
     <buttonTypes>
         <ButtonType fx:constant="APPLY" />
+      <ButtonType fx:constant="CLOSE" />
     </buttonTypes>
     <stylesheets>
         <URL value="@Css/AddApplication.css" />
