--- a/Admin/DataManager/View/Admin.Category.Add.fxml
+++ b/Admin/DataManager/View/Admin.Category.Add.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<DialogPane fx:id="dialogCategoryAdd" prefHeight="323.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminCategoryAddController">
+<DialogPane fx:id="dialogCategoryAdd" prefHeight="323.0" prefWidth="420.0" styleClass="dialog" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminCategoryAddController">
    <content>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="268.0" prefWidth="420.0">
          <children>
@@ -24,5 +24,6 @@
    </stylesheets>
    <buttonTypes>
       <ButtonType fx:id="saveCategory" fx:constant="APPLY" />
+      <ButtonType fx:constant="CLOSE" />
    </buttonTypes>
 </DialogPane>
