--- a/Admin/DataManager/View/Admin.Employee.Edit.fxml
+++ b/Admin/DataManager/View/Admin.Employee.Edit.fxml
@@ -15,7 +15,7 @@
             <Label layoutX="43.0" layoutY="48.0" prefHeight="47.0" prefWidth="127.0" styleClass="LabelTilte" text="Name">
 
             </Label>
-            <Label prefHeight="24.0" prefWidth="480.0" styleClass="header" text="Add" />
+            <Label prefHeight="24.0" prefWidth="480.0" styleClass="header" text="Edit" />
             <Label layoutX="45.0" layoutY="108.0" prefHeight="46.0" prefWidth="123.0" styleClass="LabelTilte" text="Phone">
 
             </Label>
@@ -39,6 +39,7 @@
    </expandableContent>
    <buttonTypes>
       <ButtonType fx:constant="APPLY" />
+      <ButtonType fx:constant="CLOSE" />
    </buttonTypes>
    <stylesheets>
       <URL value="@Css/AddApplication.css" />
