--- a/Admin/DataManager/View/Admin.Employee.fxml
+++ b/Admin/DataManager/View/Admin.Employee.fxml
@@ -5,9 +5,11 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="515.0" prefWidth="899.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminEmployeeController">
    <children>
@@ -57,7 +59,17 @@
                </ImageView>
            </graphic>
        </Button>
-
+       <TextField fx:id="txtSearchName" layoutX="35.0" layoutY="41.0" prefHeight="16.0" prefWidth="224.0" promptText="Search  here">
+           <font>
+               <Font size="14.0" />
+           </font>
+       </TextField>
+       <Button layoutX="272.0" layoutY="48.0" mnemonicParsing="false" onAction="#SearchName" prefHeight="28.0" prefWidth="33.0" styleClass="button-admin" />
+         <ImageView fitHeight="34.0" fitWidth="28.0" layoutX="266.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
+             <image>
+                 <Image url="@../../../Icon/search2.png" />
+             </image>
+         </ImageView>
 
 
    </children>
