--- a/Admin/DataManager/View/Admin.Product.Add.fxml
+++ b/Admin/DataManager/View/Admin.Product.Add.fxml
@@ -39,10 +39,12 @@
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
     </expandableContent>
     <buttonTypes>
-        <ButtonType fx:constant="APPLY" />
+        <ButtonType fx:constant="CLOSE" />
+      <ButtonType fx:constant="APPLY" />
     </buttonTypes>
     <stylesheets>
         <URL value="@Css/AddApplication.css" />
         <URL value="@Css/AdminApplication.css" />
+      <URL value="@Css/Application.css" />
     </stylesheets>
 </DialogPane>
