--- a/Admin/DataManager/View/Admin.Product.Edit.fxml
+++ b/Admin/DataManager/View/Admin.Product.Edit.fxml
@@ -40,6 +40,7 @@
     </expandableContent>
     <buttonTypes>
         <ButtonType fx:constant="APPLY" />
+      <ButtonType fx:constant="CLOSE" />
     </buttonTypes>
     <stylesheets>
         <URL value="@Css/AddApplication.css" />
