--- a/Admin/IngredientsManager/View/FormIngredientOrder.fxml
+++ b/Admin/IngredientsManager/View/FormIngredientOrder.fxml
@@ -3,7 +3,6 @@
 <?import java.net.URL?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -43,7 +42,6 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <DatePicker fx:id="date" layoutX="762.0" layoutY="79.0" prefHeight="32.0" prefWidth="222.0" promptText="Choose Date" />
       <Button fx:id="backWarehouseBtn" layoutX="512.0" layoutY="597.0" mnemonicParsing="false" onAction="#sendOrder" prefHeight="27.0" prefWidth="73.0" styleClass="btn-confirm" text="Send" />
       <Button fx:id="newOrderBtn" layoutX="3.0" layoutY="595.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin">
          <graphic>
@@ -57,6 +55,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
+      <TextField fx:id="dateTxt" editable="false" layoutX="762.0" layoutY="80.0" prefHeight="32.0" prefWidth="222.0" />
    </children>
     <stylesheets>
         <URL value="@Css/WarehouseApplication.css" />
