--- a/Helpers/SignIn/Alert.css
+++ b/Helpers/SignIn/Alert.css
@@ -15,7 +15,7 @@
 .title-form{
     -fx-alignment: center;
     -fx-font-weight: 900;
-    -fx-background-color: linear-gradient(to right, #7474bf, #fafafc);
+    -fx-background-color: #FFF;
     -fx-font-size: 14;
     -fx-padding: 4px 8px;
     -fx-text-fill: #ff0000;
@@ -46,6 +46,27 @@
     -fx-effect: dropshadow(three-pass-box, #ffffff,10,0,0,0);
 }
 
+
+.dialog-pane .content{
+    -fx-font-size: 15;
+    -fx-text-fill: #fff;
+}
+
+.dialog-pane .header-panel {
+    -fx-background-color: #fff;
+    -fx-background-radius: 10px;
+    -fx-text-fill: red;
+}
+
+.dialog-pane .header-panel .label{
+    -fx-alignment: center;
+    -fx-font-size: 20;
+    -fx-font-weight: 700;
+    -fx-font-family: Arial;
+    -fx-text-fill: red;
+}
+
+
 .dialog-pane{
     -fx-padding: 5,0,0,0;
     -fx-border-color: white;
@@ -54,7 +75,7 @@
 }
 
 .root{
-    -fx-background-color: linear-gradient(to right, #f0c27b, #4b1248);
+    -fx-background-color: linear-gradient(from 25% 25% to 100% 100%, #ff006e, #0077b6);
     -fx-background-radius: 10;
 }
 
