--- a/Admin/SalaryCalculate/View/Salarytable.fxml
+++ b/Admin/SalaryCalculate/View/Salarytable.fxml
@@ -10,38 +10,39 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="592.0" prefWidth="950.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Salarytable">
+<AnchorPane prefHeight="523.0" prefWidth="1109.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Salarytable">
     <children>
-        <Button layoutX="3.0" layoutY="39.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Employee" />
-        <Button layoutX="3.0" layoutY="93.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Salary" />
-        <Button layoutX="3.0" layoutY="148.0" mnemonicParsing="false" onAction="#changeSceneTimekeeping" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="TimeKeeping" />
-        <Button layoutX="31.0" layoutY="520.0" minWidth="52.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" styleClass="button-bc">
-            <graphic>
-                <ImageView fitHeight="41.0" fitWidth="45.0" layoutX="206.0" layoutY="258.0" pickOnBounds="true" preserveRatio="true" styleClass="button-bc">
-                    <image>
-                        <Image url="@../../../Icon/backnow.png" />
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
-      <AnchorPane layoutX="121.0" prefHeight="520.0" prefWidth="765.0">
+        <Button layoutX="25.0" layoutY="80.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Employee" />
+        <Button layoutX="25.0" layoutY="153.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Salary" />
+        <Button layoutX="25.0" layoutY="217.0" mnemonicParsing="false" onAction="#changeSceneTimekeeping" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="TimeKeeping" />
+        <Button layoutX="31.0" layoutY="520.0" minWidth="52.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" styleClass="button-bc" />
+      <AnchorPane layoutX="169.0" prefHeight="557.0" prefWidth="936.0">
          <children>
-             <Label fx:id="header" alignment="CENTER" prefHeight="34.0" prefWidth="900.0" text="Salary" />
-             <TableView fx:id="employeeTableSalaryView" layoutY="34.0" prefHeight="540.0" prefWidth="890.0">
+             <Label fx:id="header" alignment="CENTER" layoutY="1.0" prefHeight="42.0" prefWidth="900.0" text="Salary" />
+             <TableView fx:id="employeeTableSalaryView" layoutY="56.0" prefHeight="422.0" prefWidth="900.0">
                <columns>
                       <TableColumn fx:id="employeeTableSLRColumnID" prefWidth="72.66668701171875" text="ID" />
                       <TableColumn fx:id="employeeTableSLRColumnName" prefWidth="193.3333740234375" text="Name" />
                       <TableColumn fx:id="employeeTableSLRColumnPosition" prefWidth="78.0" text="Position" />
                       <TableColumn fx:id="employeeTableSLRColumnType" prefWidth="73.33331298828125" text="Type" />
                       <TableColumn fx:id="employeeTableSLRColumnSalaryPerHour" prefWidth="110.33331298828125" text="SalaryOfTime" />
-                      <TableColumn fx:id="employeeTableSLRColumnDate" prefWidth="96.66668701171875" text="WorkingDate" />
-                      <TableColumn fx:id="employeeTableSLRColumnHour" prefWidth="91.66668701171875" text="WorkingHour" />
-                      <TableColumn fx:id="employeeTableSLRColumnSalary" prefWidth="170.0" text="Salary" />
+                      <TableColumn fx:id="employeeTableSLRColumnDate" prefWidth="106.3333740234375" text="WorkingDate" />
+                      <TableColumn fx:id="employeeTableSLRColumnHour" prefWidth="92.6666259765625" text="WorkingHour" />
+                      <TableColumn fx:id="employeeTableSLRColumnSalary" prefWidth="170.666748046875" text="Salary" />
                </columns>
             </TableView>
-            <ComboBox fx:id="ComboBoxMonth" layoutX="527.0" layoutY="5.0"  prefWidth="150.0" onAction="#changeMonth" promptText="Chosse Month" />
+            <ComboBox fx:id="ComboBoxMonth" layoutX="735.0" layoutY="10.0" onAction="#changeMonth" prefWidth="150.0" promptText="Chosse Month" />
          </children>
       </AnchorPane>
+       <Button layoutX="52.0" layoutY="424.0" mnemonicParsing="false" onAction="#GoBack" styleClass="button-admin">
+           <graphic>
+               <ImageView fitHeight="46.0" fitWidth="49.0" layoutX="-27.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
+                   <image>
+                       <Image url="@../../../Icon/backnow.png" />
+                   </image>
+               </ImageView>
+           </graphic>
+       </Button>
     </children>
     <stylesheets>
         <URL value="@CSS/Salary.css" />
