--- a/Admin/SalaryCalculate/View/CSS/Salary.css
+++ b/Admin/SalaryCalculate/View/CSS/Salary.css
@@ -1,10 +1,11 @@
 #header{
-   -fx-background-color: #5F50F1;
+   -fx-background-color: #00BFFF;
     -fx-text-fill: #fff;
     -fx-font-family: "Segoe UI Semibold";
     -fx-font-weight: Bold;
     -fx-font-size: 18px;
     -fx-color: #5F50F1;
+    -fx-border-color: #FFFF00    ;
 }
 .TextField {
     -fx-background-color: #FFFFFF;
@@ -15,17 +16,25 @@
     -fx-effect: dropshadow(three-pass-box, #5F50F1,10,0,0,0);
 }
 .background{
-    -fx-background-color: #CCFFFF;
+    -fx-background-color: #B0E0E6     ;
+}
+.table-view{
+    -fx-effect: dropshadow(three-pass-box, #111,10,0,0,0);
+    -fx-border-color: #0000FF   ;
+}
+.table-view .column-header{
+    -fx-size: 30;
+    -fx-background-color:  #00BFFF;
+    -fx-alignment: center;
 }
 .title{
     -fx-background-color: #FFFFFF;
 }
-.table-view{
-     -fx-effect: dropshadow(three-pass-box, #111,10,0,0,0);
-}
 .button-menu {
     -fx-background-color: transparent;
-    -fx-background-color: #5F50F1;
+    -fx-background-color: #00BFFF;
+    -fx-border-color: #FFFF00    ;
+    -fx-border-radius: 10;
     -fx-color: #5F50F1;
     -fx-font-family: "Segoe UI Semibold";
 }
@@ -44,6 +53,33 @@
 }
 .button-admin:hover{
     -fx-effect: dropshadow(three-pass-box, #5F50F1,10,0,0,0);
+}
+.label-textField{
+    -fx-border: 4;
+    -fx-border-color: #FF4500;
+    -fx-padding: 0 20;
+    -fx-background-color:#FFD700   ;
+     -fx-font-family: "Segoe UI Semibold";
+    -fx-font-weight: Bold;
+}
+.AlertSQL, .AlertSuccess{
+        -fx-text-fill: #fff;
+        -fx-font-family: "Segoe UI Semibold";
+        -fx-font-weight: Bold;
+        -fx-font-size: 18px;
+        -fx-color: #5F50F1;
+}
+.AlertSQL{
+        -fx-background-color: #FF0000  ;
+}
+.AlertSuccess{
+    -fx-background-color: #00CC99;
+}
+.textEror{
+    -fx-text-color: #FF0000  ;
+            -fx-text-fill: #fff;
+            -fx-font-family: "Segoe UI Semibold";
+            -fx-font-weight: Bold;
 }
 //Add employee
 .header{
