--- a/Admin/SalaryCalculate/View/EmployeeList.fxml
+++ b/Admin/SalaryCalculate/View/EmployeeList.fxml
@@ -9,65 +9,38 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="592.0" prefWidth="950.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.EmployeeList">
+<AnchorPane prefHeight="572.0" prefWidth="1100.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.EmployeeList">
     <children>
-        <Button layoutX="3.0" layoutY="39.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Employee" />
-        <Button layoutX="3.0" layoutY="93.0" mnemonicParsing="false" onAction="#changeSceneSalarytable" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Salary" />
-        <Button layoutX="3.0" layoutY="148.0" mnemonicParsing="false" onAction="#changeSceneTimekeeping" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="TimeKeeping" />
-        <Button layoutX="31.0" layoutY="520.0" minWidth="52.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" styleClass="button-bc">
-            <graphic>
-                <ImageView fitHeight="41.0" fitWidth="45.0" layoutX="206.0" layoutY="258.0" pickOnBounds="true" preserveRatio="true" styleClass="button-bc">
-                    <image>
-                        <Image url="@../../../Icon/backnow.png" />
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
-        <AnchorPane layoutX="121.0" prefHeight="520.0" prefWidth="765.0">
+        <Button layoutX="14.0" layoutY="69.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Employee" />
+        <Button layoutX="14.0" layoutY="141.0" mnemonicParsing="false" onAction="#changeSceneSalarytable" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Salary" />
+        <Button layoutX="14.0" layoutY="210.0" mnemonicParsing="false" onAction="#changeSceneTimekeeping" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="TimeKeeping" />
+        <Button layoutX="36.0" layoutY="463.0" minWidth="52.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" styleClass="button-bc" />
+        <AnchorPane layoutX="148.0" prefHeight="520.0" prefWidth="833.0">
             <children>
-                <Label fx:id="header" alignment="CENTER" prefHeight="35.0" prefWidth="813.0" text="Employee" />
-                <TableView fx:id="employeeTableView" layoutY="42.0" prefHeight="540.0" prefWidth="813.0">
+                <Label fx:id="header" alignment="CENTER" layoutY="14.0" prefHeight="35.0" prefWidth="801.0" text="Employee" />
+                <TableView fx:id="employeeTableView" layoutY="67.0" prefHeight="439.0" prefWidth="801.0" styleClass="table-view">
                     <columns>
-                        <TableColumn fx:id="employeeIDtable" prefWidth="72.66668701171875" text="ID" />
-                        <TableColumn fx:id="employeeNametable" prefWidth="216.0" text="Name" />
-                        <TableColumn fx:id="employeePhonetable" prefWidth="126.66668701171875" text="Phone" />
-                        <TableColumn fx:id="employeeTypetable" prefWidth="117.0" text="Type" />
-                        <TableColumn fx:id="employeePositiontable" prefWidth="105.0" text="Positon" />
-                        <TableColumn fx:id="employeeSalaryPerHourtable" prefWidth="156.33331298828125" text="SalaryPerHour" />
+                        <TableColumn fx:id="employeeIDtable" prefWidth="72.66668701171875" text="ID" styleClass="column"/>
+                        <TableColumn fx:id="employeeNametable" prefWidth="216.0" text="Name" styleClass="column"/>
+                        <TableColumn fx:id="employeePhonetable" prefWidth="126.66668701171875" text="Phone" styleClass="column"/>
+                        <TableColumn fx:id="employeeTypetable" prefWidth="117.0" text="Type" styleClass="column"/>
+                        <TableColumn fx:id="employeePositiontable" prefWidth="105.0" text="Positon" styleClass="column"/>
+                        <TableColumn fx:id="employeeSalaryPerHourtable" prefWidth="162.0" text="SalaryPerHour" styleClass="column"/>
                     </columns>
                 </TableView>
             </children>
         </AnchorPane>
-<!--      <Button layoutX="31.0" layoutY="258.0" mnemonicParsing="false" text="Thêm" onAction="#changSceneAddEmployee"/>-->
-<!--      <Button layoutX="31.0" layoutY="357.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="46.0" text="Xóa" />-->
-<!--      <Button layoutX="32.0" layoutY="304.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="46.0" text="Sửa" />-->
-        <Button layoutX="29.0" layoutY="255.0" mnemonicParsing="false" onAction="#changSceneAddEmployee" prefHeight="47.0" prefWidth="62.0" styleClass="button-admin">
-         <graphic>
-                <ImageView fitHeight="47.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
-                    <image>
-                        <Image url="@../../../Icon/addproduct.png" />
-                    </image>
-                </ImageView>
-         </graphic>
+        <Button layoutX="28.0" layoutY="412.0" mnemonicParsing="false" styleClass="button-admin" onAction="#GoBack">
+        <graphic>
+            <ImageView fitHeight="46.0" fitWidth="49.0" layoutX="-27.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
+                <image>
+                    <Image url="@../../../Icon/backnow.png" />
+                </image>
+            </ImageView>
+        </graphic>
         </Button>
-        <Button layoutX="30.0" layoutY="336.0" mnemonicParsing="false" styleClass="button-admin">
-            <graphic>
-                <ImageView fitHeight="46.0" fitWidth="49.0" layoutX="-27.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
-                    <image>
-                        <Image url="@../../../Icon/edit.png" />
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
-        <Button layoutX="28.0" layoutY="412.0" mnemonicParsing="false" styleClass="button-admin">
-            <graphic>
-                <ImageView fitHeight="46.0" fitWidth="42.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
-                    <image>
-                        <Image url="@../../../Icon/delete.png" />
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
+      <Button layoutX="970.0" layoutY="69.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" onAction="#changSceneAddPosition" text="Add Position" />
+      <Button layoutX="970.0" layoutY="141.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" onAction="#changSceneEditSalary" text="Edit Salary" />
     </children>
     <stylesheets>
         <URL value="@CSS/Salary.css" />
