--- a/Admin/SalaryCalculate/View/Timekeeping.fxml
+++ b/Admin/SalaryCalculate/View/Timekeeping.fxml
@@ -7,34 +7,34 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="493.0" prefWidth="712.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Timekeeping">
+<AnchorPane prefHeight="432.0" prefWidth="783.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Timekeeping">
     <children>
-        <Button layoutX="3.0" layoutY="39.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Employee" />
-        <Button layoutX="3.0" layoutY="93.0" mnemonicParsing="false" onAction="#changeSceneSalarytable" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Salary" />
-        <Button layoutX="3.0" layoutY="148.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="TimeKeeping" />
-        <Button layoutX="31.0" layoutY="400.0" minWidth="52.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" styleClass="button-bc">
+        <Button layoutX="14.0" layoutY="64.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Employee" />
+        <Button layoutX="14.0" layoutY="127.0" mnemonicParsing="false" onAction="#changeSceneSalarytable" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Salary" />
+        <Button layoutX="14.0" layoutY="190.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="TimeKeeping" />
+        <Button layoutX="31.0" layoutY="400.0" minWidth="52.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" styleClass="button-bc" />
+        <AnchorPane layoutX="146.0" layoutY="22.0" prefHeight="378.0" prefWidth="601.0" styleClass="title">
+         <children>
+             <Label fx:id="header" alignment="CENTER" prefHeight="42.0" prefWidth="601.0" text="TimeKeeping" />
+            <Label layoutX="117.0" layoutY="84.0" prefHeight="25" prefWidth="90" styleClass="label-textField" text="ID:" />
+            <Label layoutX="117.0" layoutY="127.0" prefHeight="25" prefWidth="90" styleClass="label-textField" text="Name:" />
+            <TextField fx:id="name" layoutX="222.0" layoutY="126.0" prefHeight="26.0" prefWidth="232.0" promptText="Enter Your Name " />
+            <TextField fx:id="employeeID" layoutX="222.0" layoutY="83.0" prefHeight="26.0" prefWidth="232.0" promptText="Enter Your ID" />
+            <Button layoutX="120.0" layoutY="181.0" mnemonicParsing="false" onAction="#checkin" prefHeight="32.0" prefWidth="153.0" styleClass="button-checkin" text="Checkin" />
+            <Button layoutX="298.0" layoutY="181.0" mnemonicParsing="false" onAction="#checkout" prefHeight="32.0" prefWidth="153.0" styleClass="button-checkout" text="Checkout" />
+                
+         </children>
+      </AnchorPane>
+        <Button layoutX="31.0" layoutY="346.0" mnemonicParsing="false" onAction="#GoBack" styleClass="button-admin">
             <graphic>
-                <ImageView fitHeight="41.0" fitWidth="45.0" layoutX="206.0" layoutY="258.0" pickOnBounds="true" preserveRatio="true" styleClass="button-bc">
+                <ImageView fitHeight="46.0" fitWidth="49.0" layoutX="-27.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
                     <image>
                         <Image url="@../../../Icon/backnow.png" />
                     </image>
                 </ImageView>
             </graphic>
         </Button>
-        <AnchorPane layoutX="119.0" prefHeight="493.0" prefWidth="601.0" styleClass="title">
-         <children>
-             <Label fx:id="header" alignment="CENTER" prefHeight="34.0" prefWidth="601.0" text="TimeKeeping" />
-            <Label layoutX="120.0" layoutY="87.0" text="ID:" />
-            <Label layoutX="117.0" layoutY="130.0" text="Name:" />
-            <TextField fx:id="name" layoutX="222.0" layoutY="126.0" prefHeight="26.0" prefWidth="232.0" />
-            <TextField fx:id="employeeID"  layoutX="222.0" layoutY="83.0" prefHeight="26.0" prefWidth="232.0" />
-            <Button layoutX="120.0" layoutY="181.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="153.0" styleClass="button-checkin" text="Checkin" onAction="#checkin"/>
-            <Button layoutX="298.0" layoutY="181.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="153.0" styleClass="button-checkout" text="Checkout" onAction="#checkout" />
-                
-         </children>
-      </AnchorPane>
     </children>
     <stylesheets>
         <URL value="@CSS/Salary.css" />
