--- a/Sales/ReportStatistic/View/Test.fxml
+++ b/Sales/ReportStatistic/View/Test.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Sales.Discard.ReportStatistic.Control.ScreenManager">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Sales.ReportStatistic.Control.ScreenManager">
    <children>
       <Button fx:id="btnTest" layoutX="252.0" layoutY="188.0" mnemonicParsing="false" onAction="#screenRevenueStatistic" text="Nhấn đi bạn" />
    </children>
