--- a/Admin/DataManager/View/Admin.fxml
+++ b/Admin/DataManager/View/Admin.fxml
@@ -7,10 +7,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="449.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminController">
+<AnchorPane prefHeight="449.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminController">
    <children>
       <Label id="header" prefHeight="30.0" prefWidth="671.0" text="Coffe Manage" />
-       <Button contentDisplay="TOP" layoutX="63.0" layoutY="111.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="123.0" prefWidth="101.0" styleClass="button-icon" text="Employee" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
+       <Button contentDisplay="TOP" layoutX="63.0" layoutY="111.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="123.0" prefWidth="101.0" styleClass="button-icon" stylesheets="@Css/AdminApplication.css" text="Employee" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
            <graphic>
                <ImageView fitHeight="82.0" fitWidth="102.0" layoutX="178.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
                    <image>
@@ -47,7 +47,7 @@
          </graphic>
       </Button>
       <Label alignment="CENTER" layoutX="423.0" layoutY="54.0" prefHeight="30.0" prefWidth="66.0" styleClass="labelHello" text="Xin chào! " />
-      <Button contentDisplay="TOP" layoutX="209.0" layoutY="251.0" mnemonicParsing="false" prefHeight="123.0" prefWidth="101.0" styleClass="button-icon" text="Salary" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
+      <Button contentDisplay="TOP" layoutX="209.0" layoutY="251.0" mnemonicParsing="false" onAction="#changeSceneSalary" prefHeight="123.0" prefWidth="101.0" styleClass="button-icon" text="Salary" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
          <graphic>
             <ImageView fitHeight="82.0" fitWidth="102.0" layoutX="178.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -56,7 +56,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button contentDisplay="TOP" layoutX="356.0" layoutY="257.0" mnemonicParsing="false" prefHeight="123.0" prefWidth="101.0" styleClass="button-icon" text="Statistical" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
+      <Button contentDisplay="TOP" layoutX="356.0" layoutY="257.0" mnemonicParsing="false" onAction="#screenRevenueStatistic" prefHeight="123.0" prefWidth="101.0" styleClass="button-icon" text="Statistical" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
          <graphic>
             <ImageView fitHeight="82.0" fitWidth="102.0" layoutX="178.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -83,7 +83,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Label layoutX="500.0" layoutY="54.0" prefHeight="30.0" prefWidth="80.0" styleClass="labelUserName" text="UserName" />
+      <Label fx:id="txtUserName" layoutX="500.0" layoutY="54.0" prefHeight="30.0" prefWidth="156.0" styleClass="labelUserName" text="UserName" />
       
    </children>
    <stylesheets>
